crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__while_and_bounded_loop.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"while (n > 0) { n = n - 1; } loop (4) { advance(); }\",\nParser::parse_statement)"
---
WhileStmt
  Binary ">"
    n
    0
  Block
    ExprStmt
      Assign "="
        n
        Binary "-"
          n
          1
