crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__wrap_and_clamp_are_not_keywords_and_parse_as_generic_type_names-2.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"wrap<4>\")"
---
ChevronSuffix
  TypeName "wrap"
  4
