crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__wrap_and_clamp_are_not_keywords_and_parse_as_generic_type_names.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"clamp<10>\", parse_type)"
---
ChevronSuffix
  TypeName "clamp"
  10
